--- a/index.html
+++ b/index.html
@@ -30,12 +30,15 @@
     <nav>
       <img src="images/logo.svg" alt="logo" width="124" height="24">
       <img class="hamburger" src="images/icon-hamburger.svg" alt="hamburger">
-      <ul>
-        <li><a href="">About</a></li>
-        <li><a href="">Services</a></li>
-        <li><a href="">Projects</a></li>
-        <li><a href="">Contact</a></li>
-      </ul>
+      <div class="menu">
+        <div class="triangle"></div>
+        <ul>
+          <li><a href="">About</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </div>
     </nav>
     <h1>We are creatives</h1>
     <svg class="arrow" width="36" height="114" alt="white descending arrow" xmlns="http://www.w3.org/2000/svg"><g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3v100M3 95.484l15 15 15-15"/></g></svg>
@@ -111,3 +114,6 @@
   </div>
 </body>
 </html>
+
+<script src="js/menu.js"></script>
+<script src="js/app.js"></script> 
