--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li><a href="">About</a></li>
           <li><a href="">Services</a></li>
           <li><a href="">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a class="contact" href="">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -46,50 +46,78 @@
 
   <main>
     <section class="grid-desktop">
-      <img src="images/mobile/image-transform.jpg" alt="an egg on a yellow background">
-      <div class="square">
-        <h2>Transform your brand</h2>
-          <p>
-            We are a full-service creative agency specializing in helping brands grow fast.
-            Engage your clients through compelling visuals that do most of the marketing for you.
-          </p>
-          <div class="yellow"><a href="">Learn more</a></div>
+      <div class="container">
+        <img class="img-mobile" src="images/mobile/image-transform.jpg" alt="an egg on a yellow background">
+        <div class="square">
+          <h2>Transform your brand</h2>
+            <p>
+              We are a full-service creative agency specializing in helping brands grow fast.
+              Engage your clients through compelling visuals that do most of the marketing for you.
+            </p>
+            <div class="yellow"><a href="">Learn more</a></div>
+        </div>
+        <img class="img-desktop" src="images/desktop/image-transform.jpg" alt="an egg on a yellow background">
       </div>
-      <img src="images/mobile/image-stand-out.jpg" alt="a pink glass on a pink background">
-      <div class="square">
-        <h2>Stand out to the right audience</h2>
-          <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
-          <div class="softRed"><a href="">Learn more</a></div>
+      <div class="container">
+        <img class="img-mobile" src="images/mobile/image-stand-out.jpg" alt="a pink glass on a pink background">
+        <img class="img-desktop" src="images/desktop/image-stand-out.jpg" alt="a pink glass on a pink background">
+        <div class="square">
+          <h2>Stand out to the right audience</h2>
+            <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+            <div class="softRed"><a href="">Learn more</a></div>
+        </div>
       </div>
-      <div class="rectangle graphicDesign">
-        <h3>Graphic design</h3>
-          <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
-      </div>
-      <div class="rectangle photography">
-        <h3>Photography</h3>
-          <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+      <div class="container">
+        <div class="rectangle blue">
+          <img class="img-mobile" src="images/mobile/image-graphic-design.jpg" alt="">
+          <img class="img-desktop" src="images/desktop/image-graphic-design.jpg" alt="">
+          <div class="graphicDesign">
+            <h3>Graphic design</h3>
+              <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+          </div>
+        </div>
+        <div class="rectangle">
+          <img class="img-mobile" src="images/mobile/image-photography.jpg" alt="">
+          <img class="img-desktop" src="images/desktop/image-photography.jpg" alt="">
+          <div class="photography">
+            <h3>Photography</h3>
+              <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+          </div>
+        </div>
       </div>
     </section>
-    <section class="reviews">
+    <section>
       <h4>Client testimonials</h4>
-        <img src="images/image-emily.jpg" alt="profile picture">
-        <p class="comment">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
-        <p class="name">Emily R.</p>
-        <p class="profession">Marketing Director</p>
-        <img src="images/image-thomas.jpg" alt="profile picture">
-        <p class="comment">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
-        <p class="name">Thomas S.</p>
-        <p class="profession">Chief Operating Officer</p>
-        <img src="images/image-jennie.jpg" alt="profile picture">
-        <p class="comment">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
-        <p class="name">Jennie F.</p>
-        <p class="profession">Business Owner</p>
+        <div class="reviews">
+          <div class="review">
+            <img src="images/image-emily.jpg" alt="profile picture">
+            <p class="comment">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+            <p class="name">Emily R.</p>
+            <p class="profession">Marketing Director</p>
+          </div>
+          <div class="review">
+            <img src="images/image-thomas.jpg" alt="profile picture">
+            <p class="comment">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+            <p class="name">Thomas S.</p>
+            <p class="profession">Chief Operating Officer</p>
+          </div>
+          <div class="review">
+            <img src="images/image-jennie.jpg" alt="profile picture">
+            <p class="comment">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+            <p class="name">Jennie F.</p>
+            <p class="profession">Business Owner</p>
+          </div>
+        </div>
     </section>
     <section class="grid">
-      <img src="images/mobile/image-gallery-milkbottles.jpg" alt="bottles of milk">
-      <img src="images/mobile/image-gallery-orange.jpg" alt="an orange on a plate">
-      <img src="images/mobile/image-gallery-cone.jpg" alt="an icecream cone">
-      <img src="images/mobile/image-gallery-sugar-cubes.jpg" alt="a construction made of sugar cubes">
+      <img class="img-mobile" src="images/mobile/image-gallery-milkbottles.jpg" alt="bottles of milk">
+      <img class="img-mobile" src="images/mobile/image-gallery-orange.jpg" alt="an orange on a plate">
+      <img class="img-mobile" src="images/mobile/image-gallery-cone.jpg" alt="an icecream cone">
+      <img class="img-mobile" src="images/mobile/image-gallery-sugar-cubes.jpg" alt="a construction made of sugar cubes">
+      <img class="img-desktop" src="images/desktop/image-gallery-milkbottles.jpg" alt="bottles of milk">
+      <img class="img-desktop" src="images/desktop/image-gallery-orange.jpg" alt="an orange on a plate">
+      <img class="img-desktop" src="images/desktop/image-gallery-cone.jpg" alt="an icecream cone">
+      <img class="img-desktop" src="images/desktop/image-gallery-sugarcubes.jpg" alt="a construction made of sugar cubes">
     </section>
   </main>
 
